--- a/style.css
+++ b/style.css
@@ -1,3 +1,12 @@
+header{
+    background-color:teal
+}
+main{
+    background-color:yellowgreen
+}
+footer{background-color:red}
+
+
 h1 {
     font-style: italic
 }
