--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -23,7 +23,14 @@ header {
     height: 140px;
     box-shadow: 0 10px 10px darkred;
     z-index: 99;
-    width: 100%
+    width: 100%;
+    text-align: center
+}
+
+header h1 {
+    margin: top 80px;
+    display: flex;
+    font-size: 1em
 }
 
 header a {
@@ -77,14 +84,13 @@ footer a {
 }
 
 footer a:hover {
-    color: rgb(146, 211, 27)
+    color: rgb(146, 211, 27);
+    text-decoration: underline
 }
 
 #links {
-    display: flex;
     justify-content: space-evenly;
     list-style-type: none;
-    flex-direction: row;
 }
 
 
