--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,8 +10,6 @@
 
 /*General styles*/
 body {
-    max-height: 100vh;
-    width: 100%;
     display: flex;
     flex-direction: column;
     font-family: "Sixtyfour", sans-serif;
@@ -20,26 +18,21 @@ body {
 
 header {
     background-color: teal;
-    height: 140px;
+    height: 70px;
     box-shadow: 0 10px 10px darkred;
     z-index: 99;
-    width: 100%;
-    text-align: center
 }
 
 header h1 {
-    margin: top 80px;
-    display: flex;
-    font-size: 1em
-}
-
-header a {
-    max-width: 280px
+    font-size: 20px;
+    margin-top:-5px;
+    color: indigo;
+    text-decoration: none;
+    text-align:left
 }
 
 main {
     background-color: yellowgreen;
-    flex: 1 0 100%;
 }
 
 footer {
@@ -68,12 +61,6 @@ a {
     text-decoration: none
 }
 
-header a {
-    color: indigo;
-    text-decoration: none;
-    letter-spacing: 3px;
-}
-
 a:hover {
     color: pink;
     text-decoration: underline
@@ -93,5 +80,18 @@ footer a:hover {
     list-style-type: none;
 }
 
+#logo-section{
+    height:600px
+}
 
+#cover-text{
+    /* Final rgba value sets the opacity so it is semi-transparent */
+    background-color: rgb(255, 123, 0);
+    position: absolute;
+    bottom: 30px;
+    width: 80%;
+    min-height: 200px;
+    padding-top: 40px;
+    padding-left: 10px;
+}
 @media screen and (max-width:992) {}
