--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,6 +21,10 @@ header {
     height: 70px;
     box-shadow: 0 10px 10px darkred;
     z-index: 99;
+    display: flex;
+    flex-direction:row;
+    justify-content: space-between;
+    align-items: baseline;
 }
 
 header h1 {
@@ -28,7 +32,50 @@ header h1 {
     margin-top:-5px;
     color: indigo;
     text-decoration: none;
-    text-align:left
+    text-align:left;
+}
+
+#menu {
+    list-style-type: none;
+}
+
+#menu li a{
+    color: indigo;
+}
+#menu>li{
+    margin-bottom:1em;
+    font-size:1.5em
+}
+
+.active {
+    border-bottom: 2px solid #ad054b;
+}
+
+/* Navbar styles with dropdown toggle */
+nav {
+    position: absolute;
+    background-color: teal;
+    width: 100%;
+    left: 0;
+    padding: 1em 1rem;
+    box-shadow: 0 2px 2px #3a3a3a;
+    display: none;
+    top: 70px;
+    box-shadow: 0 10px 10px darkred;
+
+}
+
+/* Nav toggle */
+#nav-toggle:checked~nav {
+    display: block;
+}
+
+#nav-toggle {
+    display: none;
+}
+
+#nav-toggle.active{
+    color:rgb(255, 0, 255)
 }
 
 main {
