--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -37,6 +37,11 @@ header h1 {
     font-style: italic;
 }
 
+.hidden-heading {
+    display: none
+}
+
+
 #menu {
     list-style-type: none;
 }
@@ -81,20 +86,26 @@ nav {
 
 .nav-toggle-label{
     font-size:3em;
-    padding:10px 10px
+    padding:10px 10px;
+}
+
+.nav-toggle-label:hover{
+    color: rgb(255, 0, 255)
 }
 
 .nav-toggle-label.active{
     color:rgb(255, 0, 255)
 }
 
+/*main styles*/
 main {
     background-color: yellowgreen;
 }
 
+
+/*footer styles*/
 footer {
     background-color: red;
-    position: fixed;
     bottom: 0;
     min-height: 100px;
     max-height: 200px;
@@ -127,8 +138,10 @@ footer a:hover {
 }
 
 #links {
+    display: flex;
     justify-content: space-evenly;
     list-style-type: none;
+    font-size:2em
 }
 
 #logo-section{
@@ -144,5 +157,86 @@ footer a:hover {
     min-height: 200px;
     padding-top: 40px;
     padding-left: 10px;
+}
+
+#aboutus>h2{
+    color:purple;
+    text-align:end;
+    padding-bottom:14px;
+    font-size:2em
+}
+#aboutus>div>h3{
+    color:#ad054b
+}
+
+#rock{
+    text-align:start;
+    padding:3px;
+}
+
+#roll {
+    text-align: end;
+    padding: 3px;
+}
+
+/*Images page styles*/
+
+#photos img {
+    width: 100%;
+    line-height: 1em
+}
+
+#photos {
+    line-height: 0
+}
+
+/*signup page styles*/
+#signup {
+    background-size: cover;
+    background-position: 75%;
+    padding: 20px 10% 0 10%;
+    flex-grow: 1;
+}
+
+#signup-form {
+    color: #ffffff;
+    background-color: rgba(60, 60, 60, 0.6);
+    padding: 15px;
+}
+
+#signup-form>h4 {
+    color: #fafafa;
+    margin-bottom: 20px;
+}
+
+.text-input {
+    background: transparent;
+    color: #fafafa;
+    width: 100%;
+    height: 25px;
+    margin: 5px 0 20px 0;
+    border: 1px solid #fafafa;
+    border-radius: 2px;
+    padding: 0 5px;
+}
+
+.radio-buttons {
+    width: 100%;
+}
+.radio-buttons div{
+    padding-bottom:6px
+}
+
+.join-button {
+    margin-top: 6px;
+    border-radius: 2px;
+    padding: 6px 6px;
+    font-size: 100%;
+    background-color: #454b1b;
+    color: #fafafa;
+}
+.join-button:hover{
+    background-color:#fafafaaf;
+    color:#454b1b;
 }
 @media screen and (max-width:992) {}
