--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -110,7 +110,9 @@ footer {
     min-height: 100px;
     max-height: 200px;
     width: 100%;
-    flex-direction: row
+    flex-direction: row;
+    position:relative;
+    bottom:0px
 }
 
 footer h4 {
@@ -147,6 +149,11 @@ footer a:hover {
 #logo-section{
     height:600px
 }
+#logo{
+    max-height:600px;
+    max-width:600px;
+
+}
 
 #cover-text{
     /* Final rgba value sets the opacity so it is semi-transparent */
@@ -154,12 +161,14 @@ footer a:hover {
     position: absolute;
     bottom: 30px;
     width: 80%;
+    max-width:300px;
     min-height: 200px;
     padding-top: 40px;
     padding-left: 10px;
+    text-transform: underline
 }
 
-#aboutus>h2{
+#aboutushead{
     color:purple;
     text-align:end;
     padding-bottom:14px;
@@ -171,14 +180,16 @@ footer a:hover {
 
 #rock{
     text-align:start;
-    padding:3px;
+    padding:15px;
 }
 
 #roll {
     text-align: end;
-    padding: 3px;
+    padding: 15px;
 }
-
+#rock>h3,#roll>h3{
+    padding-bottom:7px
+}
 /*Images page styles*/
 
 #photos img {
@@ -239,4 +250,71 @@ footer a:hover {
     background-color:#fafafaaf;
     color:#454b1b;
 }
-@media screen and (max-width:992) {}
+@media screen and (min-width:400px) {
+    #cover-text{
+    min-height:00px;
+    padding:15px;
+    }
+}
+
+@media screen and (min-width:500px){
+    #logo{width:90%
+}
+@media screen and (min-width:550px) {
+    header>a>h1{
+        font-size:2em;
+        position:relative;
+    }
+    #logo {
+        width: 80%
+    }
+
+@media screen and (min-width:670px){
+    header>a>h1{
+        left: 15px;
+        top: 1px;
+    }
+    #logo{
+        width:70%
+    }
+
+@media screen and (min-width:870px) {
+    #logo {
+        position:absolute;
+        right:40px
+    }
+    #cover-text{
+        height:300px;
+        width:300px;
+        padding-top:100px;
+        position:relative;
+        left:20px;
+        top:200px
+    }
+    #cover-text>h3,#cover-text>h2{
+        font-size:2em
+    }
+
+}
+
+@media screen and (min-width:1135px){
+    header>a>h1{
+        font-size:3em
+    }
+    #aboutus{
+        display:flex
+    }
+        #cover-text {
+            height: 500px;
+            min-width: 500px;
+            padding-top: 170px;
+            position:relative;
+            left:5%;
+            top:120px
+        }
+    
+        #cover-text>h3,
+        #cover-text>h2 {
+            font-size: 3em
+        }
+}
