--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,18 +22,18 @@ header {
     box-shadow: 0 10px 10px darkred;
     z-index: 99;
     display: flex;
-    flex-direction:row;
+    flex-direction: row;
     justify-content: space-between;
     align-items: baseline;
 }
 
 header h1 {
-    position:relative;
-    top:-18px;
+    position: relative;
+    top: -18px;
     font-size: 20px;
     color: indigo;
     text-decoration: none;
-    text-align:left;
+    text-align: left;
     font-style: italic;
 }
 
@@ -46,15 +46,17 @@ header h1 {
     list-style-type: none;
 }
 
-#menu li a{
+#menu li a {
     color: indigo;
 }
-#menu>li{
-    margin-bottom:5px;
-    font-size:1.5em
+
+#menu>li {
+    margin-bottom: 5px;
+    font-size: 1.5em
 }
-#menu li a:hover{
-    color:rgb(253, 171, 185)
+
+#menu li a:hover {
+    color: rgb(253, 171, 185)
 }
 
 .active {
@@ -84,17 +86,17 @@ nav {
     display: none;
 }
 
-.nav-toggle-label{
-    font-size:3em;
-    padding:10px 10px;
+.nav-toggle-label {
+    font-size: 3em;
+    padding: 10px 10px;
 }
 
-.nav-toggle-label:hover{
+.nav-toggle-label:hover {
     color: rgb(255, 0, 255)
 }
 
-.nav-toggle-label.active{
-    color:rgb(255, 0, 255)
+.nav-toggle-label.active {
+    color: rgb(255, 0, 255)
 }
 
 /*main styles*/
@@ -111,8 +113,8 @@ footer {
     max-height: 200px;
     width: 100%;
     flex-direction: row;
-    position:relative;
-    bottom:0px
+    position: relative;
+    bottom: 0px
 }
 
 footer h4 {
@@ -143,53 +145,58 @@ footer a:hover {
     display: flex;
     justify-content: space-evenly;
     list-style-type: none;
-    font-size:2em
+    font-size: 2em
 }
 
-#logo-section{
-    height:600px
+#logo-section {
+    height: 600px
 }
-#logo{
-    max-height:600px;
-    max-width:600px;
+
+#logo {
+    max-height: 600px;
+    max-width: 600px;
 
 }
 
-#cover-text{
+#cover-text {
     /* Final rgba value sets the opacity so it is semi-transparent */
     background-color: rgb(255, 123, 0);
     position: absolute;
     bottom: 30px;
     width: 80%;
-    max-width:300px;
+    max-width: 300px;
     min-height: 200px;
     padding-top: 40px;
     padding-left: 10px;
     text-transform: underline
 }
 
-#aboutushead{
-    color:purple;
-    text-align:end;
-    padding-bottom:14px;
-    font-size:2em
-}
-#aboutus>div>h3{
-    color:#ad054b
+#aboutushead {
+    color: purple;
+    text-align: end;
+    padding-bottom: 14px;
+    font-size: 2em
 }
 
-#rock{
-    text-align:start;
-    padding:15px;
+#aboutus>div>h3 {
+    color: #ad054b
+}
+
+#rock {
+    text-align: start;
+    padding: 15px;
 }
 
 #roll {
     text-align: end;
     padding: 15px;
 }
-#rock>h3,#roll>h3{
-    padding-bottom:7px
+
+#rock>h3,
+#roll>h3 {
+    padding-bottom: 7px
 }
+
 /*Images page styles*/
 
 #photos img {
@@ -234,8 +241,9 @@ footer a:hover {
 .radio-buttons {
     width: 100%;
 }
-.radio-buttons div{
-    padding-bottom:6px
+
+.radio-buttons div {
+    padding-bottom: 6px
 }
 
 .join-button {
@@ -246,86 +254,102 @@ footer a:hover {
     background-color: #454b1b;
     color: #fafafa;
 }
-.join-button:hover{
-    background-color:#fafafaaf;
-    color:#454b1b;
+
+.join-button:hover {
+    background-color: #fafafaaf;
+    color: #454b1b;
 }
+
 @media screen and (min-width:400px) {
-    #cover-text{
-    min-height:00px;
-    padding:15px;
+    #cover-text {
+        min-height: 00px;
+        padding: 15px;
     }
 }
 
-@media screen and (min-width:500px){
-    #logo{width:90%
-}
-@media screen and (min-width:550px) {
-    header>a>h1{
-        font-size:2em;
-        position:relative;
+@media screen and (min-width:500px) {
+    #logo {
+        width: 90%
     }
+}
+
+@media screen and (min-width:550px) {
+    header>a>h1 {
+        font-size: 2em;
+        position: relative;
+    }
+
     #logo {
         width: 80%
     }
-@media screen and (min-width:576px){
-    #photos{
-        column-count:2;
-        column-gap:0
+}
+
+@media screen and (min-width:576px) {
+    #photos {
+        column-count: 2;
+        column-gap: 0
     }
 }
-@media screen and (min-width:670px){
-    header>a>h1{
+
+@media screen and (min-width:670px) {
+    header>a>h1 {
         left: 15px;
         top: 1px;
     }
-    #logo{
-        width:70%
-    }
 
-@media screen and (min-width:768px){
-    #photos{
-        column-count:3
+    #logo {
+        width: 70%
+    }
+}
+
+@media screen and (min-width:768px) {
+    #photos {
+        column-count: 3
     }
 }
 
 @media screen and (min-width:870px) {
     #logo {
-        position:absolute;
-        right:40px
+        position: absolute;
+        right: 40px
     }
-    #cover-text{
-        height:300px;
-        width:300px;
-        padding-top:100px;
-        position:relative;
-        left:20px;
-        top:200px
+
+    #cover-text {
+        height: 300px;
+        width: 300px;
+        padding-top: 100px;
+        position: relative;
+        left: 20px;
+        top: 200px
     }
-    #cover-text>h3,#cover-text>h2{
-        font-size:2em
+
+    #cover-text>h3,
+    #cover-text>h2 {
+        font-size: 2em
     }
 
 }
 
-@media screen and (min-width:1135px){
-    header>a>h1{
-        font-size:3em
+@media screen and (min-width:1135px) {
+    header>a>h1 {
+        font-size: 3em
     }
-    #aboutus{
-        display:flex
+
+    #aboutus {
+        display: flex
     }
-        #cover-text {
-            height: 500px;
-            min-width: 500px;
-            padding-top: 170px;
-            position:relative;
-            left:5%;
-            top:120px
-        }
-    
-        #cover-text>h3,
-        #cover-text>h2 {
-            font-size: 3em
-        }
+
+    #cover-text {
+        height: 500px;
+        min-width: 500px;
+        padding-top: 170px;
+        position: relative;
+        left: 5%;
+        top: 120px
+    }
+
+    #cover-text>h3,
+    #cover-text>h2 {
+        font-size: 3em
+    }
 }
